contrast issues

--- a/styles/place.css
+++ b/styles/place.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #f64231; 
-    --background-color: #f9f9f9; 
+    --primary-color: #B22222; 
+    --background-color: #ffffff; 
     --text-color: #333; 
     --font-family-main: 'Montserrat', sans-serif; 
     --font-family-secondary: 'Nunito Sans', sans-serif; 
